dockerfile/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  ports:
  - port: 5432
  selector:
    app: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: rails-app
spec:
  ports:
  - port: 3000
  selector:
    app: rails
